<resources>
    <string name="app_name">TodoList</string>
    <string name="new_todo">New Todo</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="save">Save</string>
    <string name="error_message_empty_string">The text can\'t be empty</string>
    <string name="please_correct_errors">Please, correct errors</string>
    <string name="todo_created">Todo created with success</string>
    <string name="generic_error_message">Some error occorred.</string>

    <plurals name="numberOfActivities">
        <item quantity="zero">none activity</item>
        <item quantity="one">%d activity</item>
        <item quantity="other">%d activities</item>
    </plurals>

    <!-- transactions labels -->
    <string name="transaction_title" translatable="false">title</string>
    <string name="transaction_description" translatable="false">description</string>
    <string name="transaction_view" translatable="false">view</string>
    <string name="settings_title">Settings</string>
    <string name="day_night_summary">Enable / Disable dark mode</string>
    <string name="day_night_title">Dark Mode</string>
    <string name="day_night_key">DayNight</string>
    <string name="enabled">Enabled</string>
    <string name="disabled">Disabled</string>
</resources>
